--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -14,8 +14,8 @@
   <div class="center">
     <h2>Log In</h2>
     <form action="/admin" method="post" >
-      <input name="email" type="email" placeholder="email"/>
-      <input id="password" name="password" type="password" placeholder="password"/>
+      <input name="email" type="email" placeholder="email"/ value="safad@gmail.com">
+      <input id="password" name="password" type="password" placeholder="password" value="safad"/>
       <p style="margin-left:30%;color: red;"><%= msg %></p>
       <button style="margin-left: 40%;" type="submit">LOGIN</button>
       
