--- a/views/admin/nav/usermanagment.ejs
+++ b/views/admin/nav/usermanagment.ejs
@@ -42,16 +42,7 @@
     </table>
    
        
-            <div id="unique-example">
-              <div style="color: black; cursor: pointer;" id="unique-example-text-prev" class="unique-example-text" onclick="pageback()">previous </div>
-              <div id="unique-example-counter" class="unique-example-counter">
-                  <span id="pageno" class="unique-example-number">01</span>
-                
-                  
-              </div>
-              <div style="color: black; cursor: pointer;" id="unique-example-text-next" class="unique-example-text" onclick="pagenext()">next </div>
-          </div>
-          
+    <%- include('../nav/shared/pagination.ejs') %>
           <style>
           @import url('https://fonts.googleapis.com/css2?family=Rowdies&display=swap');
           
